--- a/Urban-Farming-Model-Notebook.ipynb
+++ b/Urban-Farming-Model-Notebook.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "b83d8bd6-dc5f-4c87-9678-0e3b286fc76e",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f8958709-a029-41f8-86eb-3d80429c1195",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a28b13b0-2749-4a2c-9e2d-497b31ee8ed0",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1c6cfde8-da6d-45b8-997e-e03c6518f742",
    "metadata": {},
    "outputs": [],
@@ -492,10 +492,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "49f5ef51-84fd-4742-8852-07a9f56f0b22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Model -->  GridSearchCV(cv=5, estimator=DecisionTreeClassifier(random_state=6), n_jobs=-1,\n",
+      "             param_grid={'criterion': ['gini', 'entropy'],\n",
+      "                         'max_depth': [3, 5, 7, 9, 11, 13]},\n",
+      "             scoring='accuracy') DecisionTreeClassifier\n",
+      "Mean CV score 0.892218915143048\n",
+      "Accuracy 0.895320162136115\n",
+      "f1-score 0.8361942781104458\n",
+      "AUC 0.8819268315628647\n",
+      "\n",
+      "\n",
+      "Model -->  GridSearchCV(cv=5, estimator=LogisticRegression(random_state=6), n_jobs=-1,\n",
+      "             param_grid={'C': [100, 10, 1.0, 0.1, 0.01],\n",
+      "                         'penalty': ['l1', 'l2'], 'solver': ['liblinear']},\n",
+      "             scoring='accuracy') LogisticRegression\n",
+      "Mean CV score 0.693069306930693\n",
+      "Accuracy 0.6896737435868363\n",
+      "f1-score 0.12959134997614882\n",
+      "AUC 0.5238106971490101\n",
+      "\n",
+      "\n",
+      "Model -->  GridSearchCV(cv=StratifiedKFold(n_splits=5, random_state=6, shuffle=True),\n",
+      "             estimator=RandomForestClassifier(random_state=6), n_jobs=-1,\n",
+      "             param_grid={'criterion': ['gini', 'entropy'],\n",
+      "                         'max_depth': [10, 20, 30], 'max_leaf_nodes': [50, 100],\n",
+      "                         'n_estimators': [200, 400, 700]},\n",
+      "             scoring='accuracy') RandomForestClassifier\n",
+      "Mean CV score 0.8122213448338698\n",
+      "Accuracy 0.8108223022194506\n",
+      "f1-score 0.6265249020705093\n",
+      "AUC 0.7277868816955745\n"
+     ]
+    }
+   ],
    "source": [
     "model_metrics(model_tree, X_test, y_test, \"DecisionTreeClassifier\")\n",
     "model_metrics(model_log, X_test, y_test, \"LogisticRegression\")\n",
